Revision history for DBIx::Class

        - The hashref to connection_info now accepts a 'dbh_maker'
          coderef, allowing better intergration with Catalyst
        - Fixed a complex prefetch + regular join regression introduced
          in 0.08108
        - SQLT related fixes:
          - sqlt_type is now called on the correct storage object
          - hooks can now see the correct producer_type
        - POD improvements

0.08109 2009-08-18 08:35:00 (UTC)
        - Replication updates:
          - Improved the replication tests so that they are more reliable
            and accurate, and hopefully solve some cross platform issues.
          - Bugfixes related to naming particular replicants in a
            'force_pool' attribute.
          - Lots of documentation updates, including a new Introduction.pod
            file.
          - Fixed the way we detect transaction to make this more reliable
            and forward looking.
          - Fixed some trouble with the way Moose Types are used.
          - Made discard_chages/get_from_storage replication aware (they
            now read from the master storage by default)
        - Refactor of MSSQL storage drivers, with some new features:
          - Support for placeholders for MSSQL via DBD::Sybase with proper
            autodetection
          - 'uniqueidentifier' support with auto newid()
          - Dynamic cursor support and other MARS options for ODBC
          - savepoints with auto_savepoint => 1
        - Support for MSSQL 'money' type
        - Support for 'smalldatetime' type used in MSSQL and Sybase for
          InflateColumn::DateTime
        - support for Postgres 'timestamp without timezone' type in
          InflateColumn::DateTime (RT#48389)
        - Added new MySQL specific on_connect_call macro 'set_strict_mode'
          (also known as make_mysql_not_suck_as_much)
        - Multiple prefetch-related fixes:
          - Adjust overly agressive subquery join-chain pruning